# robot-testing-framework

./: .appveyor.yml  .clang-format  .coveralls.yml  .gitignore  .mailmap  .travis.yml  Asserter_8h.html  Asserter_8h__dep__incl.map  Asserter_8h__incl.map  Asserter_8h_source.html  CMakeLists.txt  ConsoleListener_8h.html  ConsoleListener_8h__incl.map  ConsoleListener_8h_source.html  DllPluginLoader_8h.html  DllPluginLoader_8h__incl.map  DllPluginLoader_8h__incl.md5  DllPluginLoader_8h_source.html  Exception_8h.html  Exception_8h__dep__incl.map  Exception_8h_source.html  FixtureManager_8h.html  FixtureManager_8h__dep__incl.map  FixtureManager_8h__incl.map  FixtureManager_8h_source.html  Plugin_8h.html  Plugin_8h_source.html  README.md  RTFConfig.cmake.in  ResultEvent_8h.html  ResultEvent_8h__dep__incl.md5  ResultEvent_8h__incl.map  ResultEvent_8h_source.html  RobotTestingFrameworkConfig.cmake.in  TestAssert_8h.html  TestAssert_8h__incl.map  TestAssert_8h_source.html  TestCase_8h.html  TestCase_8h__dep__incl.map  TestCase_8h__incl.map  (+173 more)
examples/: CMakeLists.txt  simple.cpp  simple_collector.cpp  simple_fixture.cpp  simple_runner.cpp  simple_suit.cpp  simple_suite.cpp  simple_web.cpp
examples/ada-plugin/: README.md  mytest.gpr
examples/ada-plugin/src/: mytest.adb  mytest.ads
examples/fixture-plugin/: CMakeLists.txt  MyFixManager.cpp  MyFixManager.h  test.cpp
examples/lua-plugin/: CMakeLists.txt  mytest.lua  result.txt  run.cpp
examples/plugin/: CMakeLists.txt  MyTest.cpp  MyTest.h  run.cpp
examples/python-plugin/: CMakeLists.txt  mytest.py  run.cpp
examples/ruby-plugin/: CMakeLists.txt  mytest.rb  run.cpp
examples/testrunner/: mysuit.xml  mysuite.xml
src/: Asserter.cpp  CMakeLists.txt  ConsoleListener.cpp  Logger.cpp  Logger.h  TestCase.cpp  TestMessage.cpp  TestResult.cpp  TestResultCollector.cpp  TestSet.cpp  TestSet.h  TestSuit.cpp  TextOutputter.cpp  UnitTest.cpp  UnitTest.h  main.cpp
src/middleware/: CMakeLists.txt
src/middleware/yarp/: CMakeLists.txt
src/middleware/yarp/fixture-ymanager/: YarpFixManager.cpp
src/plugins/: CMakeLists.txt
src/plugins/ada/: README.md
src/plugins/ada/src_ada/: robottestingframework-asserter.adb  robottestingframework-asserter.ads  robottestingframework-testcase.adb  robottestingframework-testcase.ads  robottestingframework.ads  rtf-asserter.adb  rtf-asserter.ads  rtf-testcase.adb  rtf-testcase.ads  rtf.ads
src/plugins/ada/src_cpp/: AdaTest.cpp
src/plugins/dll/: CMakeLists.txt
src/plugins/dll/include/: DllFixturePluginLoader.h  DllPluginLoader.h  Plugin.h
src/plugins/dll/src/: DllFixturePluginLoader.cpp  DllPluginLoader.cpp  SharedLibrary.cpp  SharedLibraryFactory.cpp
src/plugins/lua/: CMakeLists.txt
src/plugins/lua/include/: LuaPluginLoader.h
src/plugins/lua/src/: LuaPluginLoader.cpp
src/plugins/python/: CMakeLists.txt
src/plugins/python/include/: PythonPluginLoader.h
src/plugins/python/src/: PythonPluginLoader.cpp
src/plugins/ruby/: CMakeLists.txt
src/plugins/ruby/include/: RubyPluginLoader.h
src/plugins/ruby/src/: RubyPluginLoader.cpp
src/robottestingframework/: CMakeLists.txt
src/robottestingframework-testrunner/: CMakeLists.txt
src/robottestingframework-testrunner/include/: ErrorLogger.h  JUnitOutputter.h  PlatformDir.h  PluginFactory.h  PluginRunner.h  SuiteRunner.h  Version.h.in  cmdline.h
src/robottestingframework-testrunner/src/: ErrorLogger.cpp  JUnitOutputter.cpp  PluginRunner.cpp  SuiteRunner.cpp  main.cpp
src/robottestingframework/include/robottestingframework/: Arguments.h  Asserter.h  ConsoleListener.h  Exception.h  FixtureManager.h  PluginLoader.h  ResultEvent.h  Test.h  TestAssert.h  TestCase.h  TestListener.h  TestResult.h  (+6 more)
src/robottestingframework/src/: Arguments.cpp  Asserter.cpp  ConsoleListener.cpp  FixtureManager.cpp  TestCase.cpp  TestMessage.cpp  TestResult.cpp  TestResultCollector.cpp  TestRunner.cpp  TestSuite.cpp  TextOutputter.cpp  WebProgressListener.cpp
src/rtf/: CMakeLists.txt  TestCase.cpp  TestResult.cpp  TestRunner.cpp
src/rtf/include/: Arguments.h  Asserter.h  ConsoleListener.h  Exception.h  FixtureManager.h  PluginLoader.h  ResultEvent.h  Test.h  TestAssert.h  TestCase.h  TestListener.h  TestMessage.h  TestResult.h  TestResultCollector.h  TestRunner.h  TestSuit.h  TextOutputter.h  WebProgressListener.h
src/rtf/src/: Arguments.cpp  Asserter.cpp  ConsoleListener.cpp  FixtureManager.cpp  TestCase.cpp  TestMessage.cpp  TestResult.cpp  TestResultCollector.cpp  TestRunner.cpp  TestSuit.cpp  TestSuite.cpp  TextOutputter.cpp  WebProgressListener.cpp
src/testCamera/: TestCamera.cpp  TestCamera.h
src/testFTSensors/: TestFTSensors.cpp  TestFTSensors.h
src/testMotors/: TestMotors.cpp  TestMotors.h
src/testrunner/: CMakeLists.txt  main.cpp
src/testrunner/include/: ErrorLogger.h  JUnitOutputter.h  PlatformDir.h  PluginFactory.h  PluginRunner.h  SuitRunner.h  SuiteRunner.h  Version.h  Version.h.in  cmdline.h
src/testrunner/src/: ErrorLogger.cpp  JUnitOutputter.cpp  PluginRunner.cpp  SuitRunner.cpp  SuiteRunner.cpp  main.cpp
tests/: CMakeLists.txt  CMakeLists.txt.autosave
tests/api/: AsserterTest.cpp  CMakeLists.txt  ExceptionsTest.cpp  VocabTest.cpp
tests/basic/: CMakeLists.txt  FixtureManager.cpp  MultiTestCases.cpp  SingleTestCase.cpp  SingleTestSuite.cpp  WebProgListener.cpp  result.txt
tests/fixture/: CMakeLists.txt  FixturePluginLoader.cpp  MyFixManager.cpp  MyFixManager.h
tests/lua/: CMakeLists.txt  LuaPlugin.cpp  LuaTestCase.lua
tests/misc/: CMakeLists.txt  check_license.pl  check_license_skip.txt
tests/python/: CMakeLists.txt  PythonPlugin.cpp  PythonTestCase.py
tests/robottestingframework-testrunner/: CMakeLists.txt  testsuite.xml
tests/robottestingframework_add_suite/: CMakeLists.txt
tests/robottestingframework_add_suite/demo/: CMakeLists.txt  demo_fixturemanager.cpp  demo_testcase.cpp
tests/rtf_add_suite/: CMakeLists.txt
tests/rtf_add_suite/demo/: CMakeLists.txt  demo_fixturemanager.cpp  demo_testcase.cpp
tests/ruby/: CMakeLists.txt  RubyPlugin.cpp  RubyTestCase.rb
tests/testrunner/: CMakeLists.txt  testsuit.xml
(+1619 files in other folders)
